======================
    ADDED: right-click menu now has a "create new..." submenu
    --architecture-- right-click menu code moved to a new class KrPopupMenu
    ADDED: ctrl-alt-enter opens the current folder in a new tab
    ADDED: calculate space in archives and remote FS (KDE >= 3.3.0) 
    ADDED: experimental support for mimetype-on-demand 
    ADDED: experimental support for icon-on-demand 
    ADDED: when custom filter is set, the Totals line will show the filter. example: [*.cpp]
    ADDED: useraction: Drop a warning on JavaScript-errors
    ADDED: set krusaders icon acording to the users privileges
    ADDED: preserve date for local targets at copy / move
    ADDED: useraction: For JS-extensions the global variable scriptDir is available,
           indicating the location of the current script
    --architecture-- moved JavaScript-stuff into it's own module KrJS
    --architecture-- Makefile.am's for /krusader and /pics revised
    ADDED: Serbian translation (thanks Sasa Tomic)
    ADDED: Brazilian Portuguese translation (thanks Doutor Zero)
    ADDED: synchronize selected files
    ADDED: colorful synchronizer :-)
    ADDED: starting more tabs with --left=tab1,tab2,tab3 --right=tab4,tab5
    ADDED: vertical mode is saved with 'ui save settings' or 'save position' and restored
    ADDED: A Safari-like Jump-Back feature (Ctrl-J and in the bookmark-menu)
    ADDED: CTRL-L shortcut to go to the location bar (origin) as in firefox and konqueror
    ADDED: filters for selecting files
    ADDED: New zip/tar slave - based on KDE's but support writing to archive

  CHANGED: the panel startup is profile based instead of directory based

    FIXED: [ 1186534 ] problems with the new network connection (port, path, password, username)
    FIXED: renaming does not change the view, until VFS sends a signal about the rename actually being done
    FIXED: [ 1174273 ] updating the status bar at pressing the arrow keys