@@ -1,4 +1,5 @@
 ======================
+    ADDED: permissions column as octal numbers
     ADDED: right-click menu now has a "create new..." submenu
     --architecture-- right-click menu code moved to a new class KrPopupMenu
     ADDED: ctrl-alt-enter opens the current folder in a new tab
